--- a/src/main/resources/templates/shop/profile.html
+++ b/src/main/resources/templates/shop/profile.html
@@ -86,8 +86,8 @@
                                         </div>
 
                                         <div class="checkout__form__input">
-                                            <p>Email <span>*</span></p>
-                                            <input type="text" name="email" th:field="*{email}" placeholder="Email (dùng để đăng nhập)" required>
+                                            <p>Email <span>(Không thể thay đổi)</span></p>
+                                            <input type="text" name="email" th:field="*{email}" placeholder="Email (dùng để đăng nhập)" required readonly>
                                         </div>    
                                     </div>
                                     <div class="col-lg-6">
