--- a/src/main/resources/templates/shop/_header.html
+++ b/src/main/resources/templates/shop/_header.html
@@ -60,8 +60,8 @@
                         </div>
 
                         <div class="header__right__auth" th:if="${session.fullname != null}">
-                            <a href="/profile" th:text="${session.fullname}"></a>
-                            <a href="/logout">Đăng xuất</a>
+                            <b><a href="/profile" th:text="${session.fullname}"></a></b>
+                            <a href="/logout">/ Đăng xuất</a>
                         </div>
 
                         <ul class="header__right__widget">
