--- a/src/main/resources/templates/shop/index.html
+++ b/src/main/resources/templates/shop/index.html
@@ -45,7 +45,7 @@
                     <div class="categories__text">
                         <h1>ttu.decor</h1>
                         <p>Chào bạn! Chúng mình là ttu.decor.</p>
-                        <a href="#">About us</a>
+                        <a href="about-us">About us</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,6 @@
                         <div class="categories__item set-bg" data-setbg="/shop-assets/img/categories/category-2.jpg">
                             <div class="categories__text">
                                 <h4>In ảnh</h4>
-                                <p>358 items</p>
                                 <a href="/shop/in-anh-theo-yeu-cau-c01">Xem ngay</a>
                             </div>
                         </div>
@@ -64,7 +63,6 @@
                         <div class="categories__item set-bg" data-setbg="/shop-assets/img/categories/category-3.jpg">
                             <div class="categories__text">
                                 <h4>Album, phụ kiện</h4>
-                                <p>273 items</p>
                                 <a href="/shop/album-anh-phu-kien-c02">Xem ngay</a>
                             </div>
                         </div>
@@ -73,7 +71,6 @@
                         <div class="categories__item set-bg" data-setbg="/shop-assets/img/categories/category-4.jpg">
                             <div class="categories__text">
                                 <h4>Đồ decor</h4>
-                                <p>159 items</p>
                                 <a href="/shop/do-dung-decor-c04">Xem ngay</a>
                             </div>
                         </div>
@@ -82,7 +79,6 @@
                         <div class="categories__item set-bg" data-setbg="/shop-assets/img/categories/category-5.jpg">
                             <div class="categories__text">
                                 <h4>Postcard</h4>
-                                <p>792 items</p>
                                 <a href="/shop/postcard-c03">Xem ngay</a>
                             </div>
                         </div>
