--- a/src/main/resources/templates/shop/_footer.html
+++ b/src/main/resources/templates/shop/_footer.html
@@ -21,9 +21,9 @@
                 <div class="footer__widget">
                     <h6>ttu.decor</h6>
                     <ul>
-                        <li><a href="#">Về chúng mình</a></li>
-                        <li><a href="#">Mẹo decor</a></li>
-                        <li><a href="#">Liên hệ</a></li>
+                        <li><a href="/about-us">Về chúng mình</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                        <li><a href="/contact">Liên hệ</a></li>
                         <li><a href="#">Hướng dẫn mua hàng</a></li>
                     </ul>
                 </div>
@@ -32,10 +32,10 @@
                 <div class="footer__widget">
                     <h6>Tài khoản</h6>
                     <ul>
-                        <li><a href="#">Thông tin tài khoản</a></li>
-                        <li><a href="#">Giỏ hàng</a></li>
-                        <li><a href="#">Thanh toán</a></li>
-                        <li><a href="#">Kiểm tra đơn hàng</a></li>
+                        <li><a href="/profile">Thông tin tài khoản</a></li>
+                        <li><a href="/cart">Giỏ hàng</a></li>
+                        <li><a href="/checkout">Thanh toán</a></li>
+                        <li><a href="/profile/order">Kiểm tra đơn hàng</a></li>
                     </ul>
                 </div>
             </div>
